--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /imagenes
 HTML/proyectos-practicos/Notas-y-ejemplos/conceptos.html
-HTML/Course-of-AcademiaX-main/CSS/01 Primeros Pasos/Uso/index.html
+HTML/Course-of-AcademiaX-main
